# MusicPlayer

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
src/: MetadataReader.cpp  MetadataReader.h  PlayerController.cpp  PlayerController.h  PlaylistModel.cpp  PlaylistModel.h  TrackMetadata.cpp  TrackMetadata.h  main.cpp
